# learning-cmake

./: README.md
libs/_example/: notes.txt
libs/_example/source/: CMakeLists.txt  main.cpp
